jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Jarek Czekalski, Thomas Meyer and Alan Ezust for contributing to
this release.

{{{ Bug fixes

- Fixed unreasonable quadratic operations which could be observable on
  big search&replace-all. (Patch #3533838 by Thomas Meyer)

- Avoided unreasonable memory consumption by duplicate String instances
  that could be allocated for each occurrence in a big
  search&replace-all. (Patch #3528619 by Thomas Meyer)

}}}
{{{ API Changes

- New method MiscUtilities.openInDesktop() (Alan Ezust)

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

}}}
{{{ Editing

}}}
{{{ UI
- Added mnemonics for popup menus in File System Browser (Commands, Plugins,
  Favorites). (Jarek Czekalski)
}}}
{{{ Miscellaneous

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: